--- a/index.html
+++ b/index.html
@@ -773,7 +773,31 @@
                     </li>
                 </ul>
             </div>
-        </section>
+
+                <!-- Notes Section -->
+        <div class="info-section mx-auto">
+            <h3 class="text-xl font-semibold text-gray-800 mb-4 text-center">Notes</h3>
+            <ul class="list-disc list-inside text-gray-700 space-y-2">
+                <li>Raw data can be accessed <a href="https://drive.google.com/drive/folders/1xXCkuP1W5ORsc97fyOXA7p-KVwlVR-2u?usp=drive_link" target="_blank" class="text-blue-600 hover:underline">here</a> for more information.</li>
+                <li>Platform stage-related Ticket Queries, Top 3 queries per category (Percentages), Users' Pain Points, and Monthly Audit of User Wishlist and Feedback were analysed based on the tickets that were tagged by the CM team, so disclaimer that some tickets may not have been tagged and some may have been tagged incorrectly.</li>
+            </ul>
+        </div>
+        
+        <style>
+            /* Custom styles for the info section */
+            .info-section {
+                background-color: #ffffff;
+                border-radius: 12px;
+                box-shadow: 0 4px 6px rgba
+                    (0, 0, 0, 0.1);
+                padding: 24px;
+                width: 100%;
+                max-width: 900px; /* Max width for larger screens, adjust as needed */
+                box-sizing: border-box;
+            }
+        </style>
+                
+                </section>
     </main>
 
     <footer class="bg-gray-800 text-white mt-16">
