--- a/index.html
+++ b/index.html
@@ -774,9 +774,11 @@
                 </ul>
             </div>
 
+<hr class="border-t-2 border-gray-200 my-16"> <!-- Visual separator -->
                 <!-- Notes Section -->
         <div class="info-section mx-auto">
-            <h3 class="text-xl font-semibold text-gray-800 mb-4 text-center">Notes</h3>
+            <h2 class="text-3xl font-bold text-center mb-2 section-title">Notes</h2>
+            <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
             <ul class="list-disc list-inside text-gray-700 space-y-2">
                 <li>Raw data can be accessed <a href="https://drive.google.com/drive/folders/1xXCkuP1W5ORsc97fyOXA7p-KVwlVR-2u?usp=drive_link" target="_blank" class="text-blue-600 hover:underline">here</a> for more information.</li>
                 <li>Platform stage-related Ticket Queries, Top 3 queries per category (Percentages), Users' Pain Points, and Monthly Audit of User Wishlist and Feedback were analysed based on the tickets that were tagged by the CM team, so disclaimer that some tickets may not have been tagged and some may have been tagged incorrectly.</li>
