--- a/index.html
+++ b/index.html
@@ -779,10 +779,10 @@
         <div class="info-section mx-auto">
             <h2 class="text-2xl font-bold text-center mb-2 section-title">Notes</h2>
             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-            <ul class="list-disc list-inside text-gray-700 space-y-2">
-                <li>Raw data can be accessed <a href="https://drive.google.com/drive/folders/1xXCkuP1W5ORsc97fyOXA7p-KVwlVR-2u?usp=drive_link" target="_blank" class="text-blue-600 hover:underline">here</a> for more information.</li>
-                <li>Disclaimer: Platform stage-related Ticket Queries, Top 3 queries per category (Percentages), Users' Pain Points, and Monthly Audit of User Wishlist and Feedback were analysed based on the tickets that were tagged by the CM teamPlatform stage-related ticket queries, top 3 queries per category (percentages), users' pain points, and monthly audit of user wishlist and feedback were analysed based on tickets tagged by the CM team. Note that some relevant tickets may not have been tagged, while some irrelevant tickets may have been incorrectly tagged.</li>
-            </ul>
+                <ul class="list-inside text-gray-700 space-y-2">
+                    <li>Raw data can be accessed <a href="https://drive.google.com/drive/folders/1xXCkuP1W5ORsc97fyOXA7p-KVwlVR-2u?usp=drive_link" target="_blank" class="text-blue-600 hover:underline">here</a> for more information.</li>
+                    <li>Disclaimer: Platform stage-related Ticket Queries, Top 3 queries per category (Percentages), Users' Pain Points, and Monthly Audit of User Wishlist and Feedback were analysed based on the tickets that were tagged by the CM team. Note that some relevant tickets may not have been tagged, while some irrelevant tickets may have been incorrectly tagged.</li>
+                </ul>
         </div>
         
         <style>
