--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     </ul>
                 </div>
             </div>
-        <p class="text-sm text-gray-500 mt-8 text-center">c - IMPACT ratings: 1 = Low impact (minor annoyance, can wait); 2 = Medium impact (some disruption, feasible workaround available that is not time consuming for the CM or the user); 3 = High impact (blocks user from access or resuming work, negatively affects trust, a strong valid need for the user, negatively impacts the Community team's efficiency)<br>d - the number of GrooveHQ tickets affected<br>e - general queries include requests outside our standard service, expected platform behavior, information-only tickets, cases with no user follow-up, tickets with no platform functionality issues, autotagging or external user issues, and incorrectly tagged tickets by CMs.</p>  
+        <p class="text-sm text-gray-500 mt-8 text-center">c - IMPACT ratings: 1 = Low impact (minor annoyance, can wait); 2 = Medium impact (some disruption, feasible workaround available that is not time consuming for the CM or the user); 3 = High impact (blocks user from access or resuming work, negatively affects trust, a strong valid need for the user, negatively impacts the Community team's efficiency)<br>d - the number of GrooveHQ tickets affected<br>e - general queries include requests outside our standard service, expected platform behavior, information-only tickets, cases with no user follow-up, tickets with no platform functionality issues, external user issues, GrooveHQ autotagging issues, spam emails, and incorrectly tagged tickets by CMs.</p>  
         </section>
 
         <hr class="border-t-2 border-gray-200 my-16"> <!-- Visual separator -->
