--- a/index.html
+++ b/index.html
@@ -771,6 +771,20 @@
                             <p class="text-gray-600">Developing region-specific features, support protocols, and targeted Sales, Marketing, and Academic Success initiatives to address distinct B2B challenges.</p>
                         </div>
                     </li>
+                    <li class="flex items-start">
+                        <span class="text-2xl mr-4" style="color: #003f5c;">&#127760;</span>
+                        <div>
+                            <h4 class="font-bold text-lg">Analysis of newly created tags for more granular insights</h4>
+                            <p class="text-gray-600">Pain point and Sales tags</p>
+                        </div>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-2xl mr-4" style="color: #003f5c;">&#127760;</span>
+                        <div>
+                            <h4 class="font-bold text-lg">Quarterly Community Pulse Report</h4>
+                            <p class="text-gray-600">Quarterly reporting of GrooveHQ ticket insights with suggestions from all stakeholders as to what to include - refine wording</p>
+                        </div>
+                    </li>
                 </ul>
             </div>
 
