--- a/index.html
+++ b/index.html
@@ -216,19 +216,19 @@
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="card">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Account management</h3>
+                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Tag: Acct mgmt</h3>
                     <ul class="space-y-4 text-gray-700">
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;"></span><span><strong class="block">Users creating multiple accounts (individual and institution) and then asking to merge accounts</strong> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Account Management-tagged tickets.</span></li>
+                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;"></span><span><strong class="block">Users creating multiple accounts (individual and institution) and then asking to merge accounts</strong> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Acct mgmt-tagged tickets.</span></li>
                     </ul>
                 </div>
                 <div class="card">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Settings</h3>
+                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Tag: Invitation Issue</h3>
                     <ul class="space-y-4 text-gray-700">
                         <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;"></span><span><strong class="block">Organisational membership and review invitations expiring without being clicked or not reaching the user in the first place</strong> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Invitation Issue-tagged tickets.</span></li>
                     </ul>
                 </div>
                 <div class="card">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Reset</h3>
+                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Tag: Re-set</h3>
                     <ul class="space-y-4 text-gray-700">
                         <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ffa600;"></span><span><strong class="block">Users want to reset their own reviews because of wrong import or change in the search strategy</strong> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Reset-tagged tickets.</span></li>
                     </ul></span></li>
