--- a/index.html
+++ b/index.html
@@ -523,15 +523,12 @@
                                 'imperial.ac.uk',
                                 'mcmaster.ca',
                                 'mail.utoronto.ca',
-                                'mayo.edu',
-                                'erasmusmc.nl',
-                                'regionh.dk',
-                                'ul.ie'
+                                'mayo.edu'
                             ].map(wrapLabel), // Apply the wrapLabel function to all labels
                             datasets: [{
                                 label: 'Frequency', // Label for the dataset
                                 // Data values corresponding to the labels
-                                data: [175, 130, 118, 106, 85, 81, 91, 86, 83, 57, 56, 51],
+                                data: [227, 165, 144, 134, 119, 98, 112, 111, 111],
                                 // Background colors for each bar, grouped by region
                                 backgroundColor: [
                                     '#ff764a', '#ff764a', '#ff764a', // APAC (Orange)
