--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                             datasets: [{
                                 label: 'Frequency', // Label for the dataset
                                 // Data values corresponding to the labels
-                                data: [1392, 117, 75],
+                                data: [1899, 154, 96],
                                 // Background colors for each bar (general category)
                                 backgroundColor: [
                                     '#bc5090', '#bc5090', '#bc5090' // Other (General) (Purple)
@@ -1188,8 +1188,7 @@
                                     'APAC': '#ff764a',
                                     'EMEA': '#ffa600',
                                     'NA': '#ef5675',
-                                    'Other': '#bc5090',
-                                    'Non-UK,US,CA,AU': '#3f7b8e'
+                                    'Other': '#bc5090'
                                 };
                                 return Object.keys(colors).map(region => ({
                                     text: region,
