--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="kpi-card text-center">
                     <div class="text-4xl mb-2" style="color: #ffa600;">&#9201;</div>
                     <p class="text-4xl font-extrabold" style="color: #003f5c;">1h 7m<sup>a</sup></p>
-                    <p class="text-lg text-gray-600 mt-2">Median First Response</p>
+                    <p class="text-lg text-gray-600 mt-2">Median First Response Time</p>
                 </div>
                 <div class="kpi-card text-center">
                     <div class="text-4xl mb-2" style="color: #7a5195;">&#9989;</div>
@@ -216,19 +216,19 @@
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="card">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Tag: Acct mgmt</h3>
+                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Account Merge Requests</h3>
                     <ul class="space-y-4 text-gray-700">
                         <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;"></span><span><strong class="block">Users creating multiple accounts (individual and institution) and then asking to merge accounts</strong> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Acct mgmt-tagged tickets.</span></li>
                     </ul>
                 </div>
                 <div class="card">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Tag: Invitation Issue</h3>
+                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Invitation Failures</h3>
                     <ul class="space-y-4 text-gray-700">
                         <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;"></span><span><strong class="block">Organisational membership and review invitations expiring without being clicked or not reaching the user in the first place</strong> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Invitation Issue-tagged tickets.</span></li>
                     </ul>
                 </div>
                 <div class="card">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Tag: Re-set</h3>
+                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Review Reset Needs</h3>
                     <ul class="space-y-4 text-gray-700">
                         <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ffa600;"></span><span><strong class="block">Users want to reset their own reviews because of wrong import or change in the search strategy</strong> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Reset-tagged tickets.</span></li>
                     </ul></span></li>
